// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast Component applies custom style 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#4169E1",
      "borderRadius": 8,
      "left": 0,
      "margin": 16,
      "marginTop": 50,
      "opacity": 0,
      "padding": 16,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": -100,
        },
      ],
      "zIndex": 1000,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontFamily": "System",
          "fontSize": 16,
        },
        {
          "color": "rgba(255, 255, 255, 0.7)",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "#FFFFFF",
        },
        null,
        {
          "textAlign": "center",
        },
      ]
    }
  >
    Custom Style Toast
  </Text>
</View>
`;

exports[`Toast Component applies error background color when type is error 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FF5252",
      "borderRadius": 8,
      "left": 0,
      "margin": 16,
      "opacity": 0,
      "padding": 16,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": -100,
        },
      ],
      "zIndex": 1000,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontFamily": "System",
          "fontSize": 16,
        },
        {
          "color": "rgba(255, 255, 255, 0.7)",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "#FFFFFF",
        },
        null,
        {
          "textAlign": "center",
        },
      ]
    }
  >
    Error Message
  </Text>
</View>
`;

exports[`Toast Component applies info background color when type is info (default) 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#4169E1",
      "borderRadius": 8,
      "left": 0,
      "margin": 16,
      "opacity": 0,
      "padding": 16,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": -100,
        },
      ],
      "zIndex": 1000,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontFamily": "System",
          "fontSize": 16,
        },
        {
          "color": "rgba(255, 255, 255, 0.7)",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "#FFFFFF",
        },
        null,
        {
          "textAlign": "center",
        },
      ]
    }
  >
    Info Message
  </Text>
</View>
`;

exports[`Toast Component applies success background color when type is success 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#00E676",
      "borderRadius": 8,
      "left": 0,
      "margin": 16,
      "opacity": 0,
      "padding": 16,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": -100,
        },
      ],
      "zIndex": 1000,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontFamily": "System",
          "fontSize": 16,
        },
        {
          "color": "rgba(255, 255, 255, 0.7)",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "#FFFFFF",
        },
        null,
        {
          "textAlign": "center",
        },
      ]
    }
  >
    Success Message
  </Text>
</View>
`;

exports[`Toast Component renders correctly when visible 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#4169E1",
      "borderRadius": 8,
      "left": 0,
      "margin": 16,
      "opacity": 0,
      "padding": 16,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": -100,
        },
      ],
      "zIndex": 1000,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontFamily": "System",
          "fontSize": 16,
        },
        {
          "color": "rgba(255, 255, 255, 0.7)",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "#FFFFFF",
        },
        null,
        {
          "textAlign": "center",
        },
      ]
    }
  >
    Test Toast Message
  </Text>
</View>
`;
